added Technology Schema
