# routes/index.js
@@ -4,8 +4,9 @@ const jwtMiddleware = require('../middleware/jwtMiddleware');
 const jwtReadOnlyMiddleware = require('../middleware/jwtReadOnlyMiddleware');
 
 router.use('/users',jwtMiddleware, require('./userRouts'));
-router.use('/projects',jwtReadOnlyMiddleware, require('./projectRoutes'));
 router.use('/generate-structure',jwtReadOnlyMiddleware, require('./generateStructureRouts'));
+router.use('/types',jwtReadOnlyMiddleware, require('./typeRoutes'));
+router.use('/technologies',jwtReadOnlyMiddleware, require('./technologyRouts'));
 router.use('/tags',jwtReadOnlyMiddleware, require('./tagRouts'));
 router.use('/dependencies',jwtReadOnlyMiddleware, require('./dependenceRouts'));
 router.use('/auth', require('./authRouts'));
